--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodball News || Copa America 2021</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/2011593c8c.js" crossorigin="anonymous"></script>
+
     <!-- link css file  -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +19,13 @@
         Header code start here 
     ------------------------------>
     <header>
-
+        <div class="header-content">
+            <h1>Conmebol Copa America 2021</h1>
+            <a href="">Watch Live <i class="fas fa-arrow-right"></i></a>
+        </div>
+        <div class="header-img">
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
     <!---------------------------- 
         Header code end here 
@@ -26,14 +35,95 @@
         Main body code start here 
     ------------------------------>
     <main>
-
+        <section class="container">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h2 class="player_name">Neimar jr</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h2 class="player_name">Lionel Messi</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h2 class="player_name">Cristiano Ronaldo</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h2 class="player_name">Paulo Dybala</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h2 class="player_name">Mesut Ozil</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h2 class="player_name">Mauro Icardi</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+                    <h2 class="player_name">Di Maria</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+                    <h2 class="player_name">Kylian Mbappé</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+                    <h2 class="player_name">Mohamed Salah</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+                    <h2 class="player_name">Harry Kane</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+                    <h2 class="player_name">Kevin De Bruyne</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+                    <h2 class="player_name">Philippe Coutinho</h2>
+                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!---------------------------- 
         Main Body code end here 
     ------------------------------>
-    <footer>
 
+    <!---------------------------- 
+        Footer code start here 
+    ------------------------------>
+    <footer>
+        <div class="f_container">
+            <div class="footer_img">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="icon">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-dribbble"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+            <div class="copyright">
+                <p>Copyright &copy; 2022 Football</p>
+            </div>
+        </div>
     </footer>
 </body>
 
