mobile device responsive

--- a/index.html
+++ b/index.html
@@ -40,63 +40,63 @@
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
                     <h2 class="player_name">Neimar jr</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-2.png" alt="">
                     <h2 class="player_name">Lionel Messi</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-3.png" alt="">
                     <h2 class="player_name">Cristiano Ronaldo</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-4.png" alt="">
                     <h2 class="player_name">Paulo Dybala</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-5.png" alt="">
                     <h2 class="player_name">Mesut Ozil</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 
                 <div class="player">
                     <img src="images/players/player-6.png" alt="">
                     <h2 class="player_name">Mauro Icardi</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-7.png" alt="">
                     <h2 class="player_name">Di Maria</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-8.png" alt="">
                     <h2 class="player_name">Kylian Mbappé</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-9.png" alt="">
                     <h2 class="player_name">Mohamed Salah</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-10.png" alt="">
                     <h2 class="player_name">Harry Kane</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-11.png" alt="">
                     <h2 class="player_name">Kevin De Bruyne</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-12.png" alt="">
                     <h2 class="player_name">Philippe Coutinho</h2>
-                    <p class="player_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <p class="player_detail">The history of the rivalry between Argentina and Brazil can be traced back to a time when The 2021 Copa America final will</p>
                 </div>
             </div>
         </section>
