--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
                 </div>
             </div>
         </section>
+
+        <section class="gallery">
+            <div>
+                <h2>Our Players Photo Gallery</h2>
+                <p></p>
+            </div>
+            <div class="gallery-img">
+                <img src="images/players/player-7.png" alt="">
+                <img src="images/players/player-4.png" alt="">
+                <img src="images/players/player-6.png" alt="">
+                <img src="images/players/player-1.png" alt="">
+                <img src="images/players/player-9.png" alt="">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+        </section>
     </main>
 
     <!---------------------------- 
