--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
         <section class="gallery">
             <div>
-                <h2>Our Players Photo Gallery</h2>
-                <p></p>
+                <h2 class="heading">Our Players Photo Gallery</h2>
+                <p>.....Our Fashionable player We Are ready for Hard Working.....</p>
             </div>
             <div class="gallery-img">
                 <img src="images/players/player-7.png" alt="">
@@ -113,6 +113,18 @@
                 <img src="images/players/player-1.png" alt="">
                 <img src="images/players/player-9.png" alt="">
                 <img src="images/players/player-2.png" alt="">
+            </div>
+        </section>
+
+
+
+        <!-- copa america final highlights -->
+        <section class="highlights">
+            <div>
+                <h2 class="Heading">Copa America Final Highlights</h2>
+            </div>
+            <div>
+                <iframe width="900" height="500" src="https://www.youtube.com/embed/sDFr2Yzd-8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </main>
