--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </section>
 
         <section class="gallery">
-            <div>
+            <div class="gallery-content">
                 <h2 class="heading">Our Players Photo Gallery</h2>
                 <p>.....Our Fashionable player We Are ready for Hard Working.....</p>
             </div>
@@ -120,11 +120,11 @@
 
         <!-- copa america final highlights -->
         <section class="highlights">
-            <div>
-                <h2 class="Heading">Copa America Final Highlights</h2>
+            <div class="highlight-content">
+                <h2 class="heading">Copa America Final Highlights</h2>
             </div>
-            <div>
-                <iframe width="900" height="500" src="https://www.youtube.com/embed/sDFr2Yzd-8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="highlight-video">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/sDFr2Yzd-8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </main>
