--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                 <img src="images/Logo.png" alt="">
             </div>
             <div class="icon">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-dribbble"></i>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-dribbble"></i></a>
                 <i class="fab fa-twitter"></i>
                 <i class="fab fa-youtube"></i>
             </div>
