--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     <header>
         <div class="header-content">
             <h1>Conmebol Copa America 2021</h1>
-            <a href="">Watch Live <i class="fas fa-arrow-right"></i></a>
+            <a href="https://www.youtube.com" target="_blank">Watch Live<i class=" fas fa-arrow-right"></i></a>
         </div>
         <div class="header-img">
             <img src="images/banner.png" alt="">
         </div>
     </header>
+
     <!---------------------------- 
         Header code end here 
     ------------------------------>
@@ -142,10 +143,10 @@
                 <img src="images/Logo.png" alt="">
             </div>
             <div class="icon">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-youtube"></i>
+                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.dribbble.com" target="_blank"><i class="fab fa-dribbble"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
             <div class="copyright">
                 <p>Copyright &copy; 2022 Football</p>
