check and finish

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             </div>
         </section>
 
+        <!-- gallery section code here  -->
+
         <section class="gallery">
             <div class="gallery-content">
                 <h2 class="heading">Our Players Photo Gallery</h2>
@@ -119,7 +121,7 @@
 
 
 
-        <!-- copa america final highlights -->
+        <!-- copa america final highlights code here -->
         <section class="highlights">
             <div class="highlight-content">
                 <h2 class="heading">Copa America Final Highlights</h2>
